--- a/src/main/resources/docgen/templates/msmarco-passage-bm25-b8.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-bm25-b8.template
@@ -14,7 +14,7 @@ From one of our Waterloo servers (e.g., `orca`), the following command will perf
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
-From any machine, the following command will download the corpus and perform the complete regression, end to end:
+From any machine, the following command will download the corpus (as quantized BM25 weights) and perform the complete regression, end to end:
 
 ```bash
 python src/main/python/run_regression.py --download --index --verify --search --regression ${test_name}
@@ -73,3 +73,7 @@ ${eval_cmds}
 With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
+
+## Reproduction Log[*](reproducibility.md)
+
+To add to this reproduction log, modify [this template](${template}) and run `bin/build.sh` to rebuild the documentation.
