--- a/src/main/resources/regression/dl20-passage-bm25-b8.yaml
+++ b/src/main/resources/regression/dl20-passage-bm25-b8.yaml
@@ -1,6 +1,9 @@
 ---
-corpus: msmarco-passage
+corpus: msmarco-passage-bm25-b8
 corpus_path: collections/msmarco/msmarco-passage-bm25-b8/
+
+download_url: https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-passage-bm25-b8.tar
+download_checksum: 0a623e2c97ac6b7e814bf1323a97b435
 
 index_path: indexes/lucene-index.msmarco-passage-bm25-b8/
 collection_class: JsonVectorCollection
