--- a/src/main/resources/docgen/templates/msmarco-passage-splade-distil-cocodenser-medium.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-splade-distil-cocodenser-medium.template
@@ -10,7 +10,7 @@ Note that this page is automatically generated from [this template](${template})
 
 From one of our Waterloo servers (e.g., `orca`), the following command will perform the complete regression, end to end:
 
-```
+```bash
 python src/main/python/run_regression.py --index --verify --search --regression ${test_name}
 ```
 
@@ -46,7 +46,7 @@ python src/main/python/run_regression.py --index --verify --search --regression 
 
 Sample indexing command:
 
-```
+```bash
 ${index_cmds}
 ```
 
@@ -64,13 +64,13 @@ The regression experiments here evaluate on the 6980 dev set questions; see [thi
 
 After indexing has completed, you should be able to perform retrieval as follows:
 
-```
+```bash
 ${ranking_cmds}
 ```
 
 Evaluation can be performed using `trec_eval`:
 
-```
+```bash
 ${eval_cmds}
 ```
 
