--- a/src/main/resources/regression/dl19-passage-unicoil-noexp.yaml
+++ b/src/main/resources/regression/dl19-passage-unicoil-noexp.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-passage-unicoil-noexp/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
@@ -67,3 +67,27 @@ models:
         - 0.5629
       R@1000:
         - 0.7752
+  - name: rm3
+    display: +Rocchio
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.4176
+      nDCG@10:
+        - 0.6169
+      R@100:
+        - 0.5904
+      R@1000:
+        - 0.8020
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.4195
+      nDCG@10:
+        - 0.6226
+      R@100:
+        - 0.5883
+      R@1000:
+        - 0.7998
