--- a/src/main/resources/regression/dl19-passage-unicoil.yaml
+++ b/src/main/resources/regression/dl19-passage-unicoil.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-passage-unicoil/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
@@ -67,3 +67,27 @@ models:
         - 0.6054
       R@1000:
         - 0.8292
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.4644
+      nDCG@10:
+        - 0.6768
+      R@100:
+        - 0.6205
+      R@1000:
+        - 0.8598
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.4603
+      nDCG@10:
+        - 0.6658
+      R@100:
+        - 0.6211
+      R@1000:
+        - 0.8515
