--- a/src/main/resources/regression/dl20-passage-unicoil.yaml
+++ b/src/main/resources/regression/dl20-passage-unicoil.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-passage-unicoil/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
@@ -67,3 +67,27 @@ models:
         - 0.7006
       R@1000:
         - 0.8430
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.4475
+      nDCG@10:
+        - 0.6479
+      R@100:
+        - 0.6822
+      R@1000:
+        - 0.8417
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.4539
+      nDCG@10:
+        - 0.6599
+      R@100:
+        - 0.7096
+      R@1000:
+        - 0.8610
