--- a/src/main/resources/regression/msmarco-passage-unicoil-noexp.yaml
+++ b/src/main/resources/regression/msmarco-passage-unicoil-noexp.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-passage-unicoil-noexp/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
@@ -55,7 +55,7 @@ topics:
     qrel: qrels.msmarco-passage.dev-subset.txt
 
 models:
-  - name: unicoil
+  - name: unicoil-noexp
     display: uniCOIL (no expansions)
     params: -impact -pretokenized
     results:
@@ -67,4 +67,27 @@ models:
         - 0.8070
       R@1000:
         - 0.9239
-
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.2619
+      RR@10:
+        - 0.2536
+      R@100:
+        - 0.7953
+      R@1000:
+        - 0.9299
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.2643
+      RR@10:
+        - 0.2565
+      R@100:
+        - 0.7971
+      R@1000:
+        - 0.9326
