--- a/src/main/resources/regression/dl19-passage-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/dl19-passage-splade-distil-cocodenser-medium.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.msmarco-passage-splade_distil_cocodenser_medium
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
@@ -64,3 +64,27 @@ models:
         - 0.6344
       R@1000:
         - 0.8756
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.5196
+      nDCG@10:
+        - 0.7260
+      R@100:
+        - 0.6487
+      R@1000:
+        - 0.8732
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.5224
+      nDCG@10:
+        - 0.7316
+      R@100:
+        - 0.6533
+      R@1000:
+        - 0.8774
