--- a/src/main/resources/regression/dl20-passage-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/dl20-passage-splade-distil-cocodenser-medium.yaml
@@ -64,3 +64,27 @@ models:
         - 0.7619
       R@1000:
         - 0.8901
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      AP@1000:
+        - 0.5158
+      nDCG@10:
+        - 0.7126
+      R@100:
+        - 0.7551
+      R@1000:
+        - 0.9080
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      AP@1000:
+        - 0.5133
+      nDCG@10:
+        - 0.7033
+      R@100:
+        - 0.7575
+      R@1000:
+        - 0.8937
