--- a/src/main/resources/regression/dl19-doc-segmented-unicoil-noexp.yaml
+++ b/src/main/resources/regression/dl19-doc-segmented-unicoil-noexp.yaml
@@ -9,7 +9,7 @@ index_path: indexes/lucene-index.msmarco-doc-segmented-unicoil-noexp/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 20545677
   documents (non-empty): 20545677
@@ -67,3 +67,27 @@ models:
         - 0.3943
       R@1000:
         - 0.6391
+  - name: rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.2935
+      nDCG@10:
+        - 0.6162
+      R@100:
+        - 0.4347
+      R@1000:
+        - 0.6909
+  - name: rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.2959
+      nDCG@10:
+        - 0.6175
+      R@100:
+        - 0.4362
+      R@1000:
+        - 0.6979
