--- a/src/main/resources/regression/dl20-passage-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/dl20-passage-splade-distil-cocodenser-medium.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.msmarco-passage-splade_distil_cocodenser_medium
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
