--- a/src/main/resources/regression/dl20-passage.yaml
+++ b/src/main/resources/regression/dl20-passage.yaml
@@ -88,6 +88,18 @@ models:
         - 0.5891
       R@1000:
         - 0.8156
+  - name: bm25-default+rocchio*
+    display: +Rocchio*
+    params: -bm25 -rocchio -rocchio.useNegative
+    results:
+      AP@1000:
+        - 0.3120
+      nDCG@10:
+        - 0.4868
+      R@100:
+        - 0.6147
+      R@1000:
+        - 0.8183
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
@@ -148,6 +160,18 @@ models:
         - 0.6043
       R@1000:
         - 0.8327
+  - name: bm25-tuned+rocchio*
+    display: +Rocchio*
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative
+    results:
+      AP@1000:
+        - 0.3139
+      nDCG@10:
+        - 0.4896
+      R@100:
+        - 0.6088
+      R@1000:
+        - 0.8414
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
