--- a/src/main/resources/regression/msmarco-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented.yaml
@@ -88,6 +88,18 @@ models:
         - 0.7915
       R@1000:
         - 0.9351
+  - name: bm25-default+rocchio*
+    display: +Rocchio*
+    params: -bm25 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2465
+      RR@100:
+        - 0.2458
+      R@100:
+        - 0.7888
+      R@1000:
+        - 0.9339
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -148,6 +160,18 @@ models:
         - 0.8013
       R@1000:
         - 0.9395
+  - name: bm25-tuned+rocchio*
+    display: +Rocchio*
+    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2497
+      RR@100:
+        - 0.2491
+      R@100:
+        - 0.8042
+      R@1000:
+        - 0.9393
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
