--- a/src/main/resources/regression/dl20-doc.yaml
+++ b/src/main/resources/regression/dl20-doc.yaml
@@ -88,6 +88,18 @@ models:
         - 0.6425
       R@1000:
         - 0.8273
+  - name: bm25-default+rocchio*
+    display: +Rocchio*
+    params: -bm25 -rocchio -rocchio.useNegative
+    results:
+      AP@100:
+        - 0.4125
+      nDCG@10:
+        - 0.5233
+      R@100:
+        - 0.6470
+      R@1000:
+        - 0.8339
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87
@@ -124,6 +136,18 @@ models:
         - 0.6057
       R@1000:
         - 0.8199
+  - name: bm25-tuned+rocchio*
+    display: +Rocchio*
+    params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio -rocchio.useNegative
+    results:
+      AP@100:
+        - 0.3669
+      nDCG@10:
+        - 0.5117
+      R@100:
+        - 0.6067
+      R@1000:
+        - 0.8219
   - name: bm25-tuned2
     display: BM25 (tuned2)
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82
@@ -160,3 +184,15 @@ models:
         - 0.6017
       R@1000:
         - 0.8217
+  - name: bm25-tuned2+rocchio*
+    display: +Rocchio*
+    params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio -rocchio.useNegative
+    results:
+      AP@100:
+        - 0.3643
+      nDCG@10:
+        - 0.5189
+      R@100:
+        - 0.6075
+      R@1000:
+        - 0.8226
