--- a/src/main/resources/regression/dl19-doc-segmented.yaml
+++ b/src/main/resources/regression/dl19-doc-segmented.yaml
@@ -88,7 +88,7 @@ models:
         - 0.4415
       R@1000:
         - 0.7423
-  - name: bm25-default+rocchio*
+  - name: bm25-default+rocchio-neg
     display: +Rocchio*
     params: -bm25 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
@@ -160,7 +160,7 @@ models:
         - 0.4107
       R@1000:
         - 0.7115
-  - name: bm25-tuned+rocchio*
+  - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
