--- a/src/main/resources/regression/dl19-passage.yaml
+++ b/src/main/resources/regression/dl19-passage.yaml
@@ -88,7 +88,7 @@ models:
         - 0.5256
       R@1000:
         - 0.8007
-  - name: bm25-default+rocchio*
+  - name: bm25-default+rocchio-neg
     display: +Rocchio*
     params: -bm25 -rocchio -rocchio.useNegative
     results:
@@ -160,7 +160,7 @@ models:
         - 0.5263
       R@1000:
         - 0.7969
-  - name: bm25-tuned+rocchio*
+  - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative
     results:
