--- a/src/main/resources/regression/dl20-doc.yaml
+++ b/src/main/resources/regression/dl20-doc.yaml
@@ -88,7 +88,7 @@ models:
         - 0.6425
       R@1000:
         - 0.8273
-  - name: bm25-default+rocchio*
+  - name: bm25-default+rocchio-neg
     display: +Rocchio*
     params: -bm25 -rocchio -rocchio.useNegative
     results:
@@ -136,7 +136,7 @@ models:
         - 0.6057
       R@1000:
         - 0.8199
-  - name: bm25-tuned+rocchio*
+  - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
     params: -bm25 -bm25.k1 3.44 -bm25.b 0.87 -rocchio -rocchio.useNegative
     results:
@@ -184,7 +184,7 @@ models:
         - 0.6017
       R@1000:
         - 0.8217
-  - name: bm25-tuned2+rocchio*
+  - name: bm25-tuned2+rocchio-neg
     display: +Rocchio*
     params: -bm25 -bm25.k1 4.46 -bm25.b 0.82 -rocchio -rocchio.useNegative
     results:
