--- a/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
@@ -88,7 +88,7 @@ models:
         - 0.8017
       R@1000:
         - 0.9467
-  - name: bm25-default+rocchio*
+  - name: bm25-default+rocchio-neg
     display: +Rocchio*
     params: -bm25 -rocchio -rocchio.useNegative
     results:
@@ -136,7 +136,7 @@ models:
         - 0.8052
       R@1000:
         - 0.9496
-  - name: bm25-tuned+rocchio*
+  - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative
     results:
@@ -184,7 +184,7 @@ models:
         - 0.8238
       R@1000:
         - 0.9535
-  - name: bm25-tuned2+rocchio*
+  - name: bm25-tuned2+rocchio-neg
     display: +Rocchio*
     params: -bm25 -bm25.k1 2.18 -bm25.b 0.86 -rocchio -rocchio.useNegative
     results:
