--- a/src/main/resources/regression/dl19-passage-unicoil-noexp.yaml
+++ b/src/main/resources/regression/dl19-passage-unicoil-noexp.yaml
@@ -68,7 +68,7 @@ models:
       R@1000:
         - 0.7752
   - name: rm3
-    display: +Rocchio
+    display: +RM3
     params: -impact -pretokenized -rm3
     results:
       AP@1000:
