--- a/src/main/resources/regression/dl20-passage-unicoil-noexp.yaml
+++ b/src/main/resources/regression/dl20-passage-unicoil-noexp.yaml
@@ -70,7 +70,7 @@ models:
       R@1000:
         - 0.7861
   - name: rm3
-    display: +Rocchio
+    display: +RM3
     params: -impact -pretokenized -rm3
     results:
       AP@1000:
