--- a/src/main/resources/regression/dl19-passage.yaml
+++ b/src/main/resources/regression/dl19-passage.yaml
@@ -90,16 +90,16 @@ models:
         - 0.8007
   - name: bm25-default+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -rocchio -rocchio.useNegative
+    params: -bm25 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
-        - 0.3464
+        - 0.3463
       nDCG@10:
-        - 0.5278
+        - 0.5269
       R@100:
-        - 0.5276
+        - 0.5265
       R@1000:
-        - 0.8050
+        - 0.8027
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
@@ -162,16 +162,16 @@ models:
         - 0.7969
   - name: bm25-tuned+rocchio-neg
     display: +Rocchio*
-    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
-        - 0.3402
+        - 0.3400
       nDCG@10:
-        - 0.5303
+        - 0.5266
       R@100:
-        - 0.5272
+        - 0.5289
       R@1000:
-        - 0.7983
+        - 0.7987
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -axiom -axiom.deterministic -rerankCutoff 20
