--- a/src/main/resources/regression/msmarco-passage.yaml
+++ b/src/main/resources/regression/msmarco-passage.yaml
@@ -160,9 +160,9 @@ models:
         - 0.6702
       R@1000:
         - 0.8726
-  - name: bm25-tuned+rocchio-neg -rerankCutoff 1000
+  - name: bm25-tuned+rocchio-neg 
     display: +Rocchio*
-    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rocchio -rocchio.useNegative -rerankCutoff 1000
     results:
       AP@1000:
         - 0.1762
