--- a/src/main/resources/regression/dl19-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-doc-docTTTTTquery.yaml
@@ -76,6 +76,18 @@ models:
         - 0.4465
       R@1000:
         - 0.7738
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@100:
+        - 0.3092
+      nDCG@10:
+        - 0.5956
+      R@100:
+        - 0.4505
+      R@1000:
+        - 0.7758
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
@@ -100,3 +112,15 @@ models:
         - 0.4119
       R@1000:
         - 0.7177
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rocchio
+    results:
+      AP@100:
+        - 0.2843
+      nDCG@10:
+        - 0.6141
+      R@100:
+        - 0.4246
+      R@1000:
+        - 0.7276
