--- a/src/main/resources/regression/dl19-doc-segmented-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl19-doc-segmented-docTTTTTquery.yaml
@@ -76,6 +76,18 @@ models:
         - 0.4392
       R@1000:
         - 0.7481
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.3074
+      nDCG@10:
+        - 0.6295
+      R@100:
+        - 0.4483
+      R@1000:
+        - 0.7520
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -100,3 +112,15 @@ models:
         - 0.4237
       R@1000:
         - 0.7066
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@100:
+        - 0.2913
+      nDCG@10:
+        - 0.6244
+      R@100:
+        - 0.4271
+      R@1000:
+        - 0.7189
