--- a/src/main/resources/regression/dl20-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/dl20-doc-docTTTTTquery.yaml
@@ -76,6 +76,18 @@ models:
         - 0.6555
       R@1000:
         - 0.8596
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@100:
+        - 0.4218
+      nDCG@10:
+        - 0.5416
+      R@100:
+        - 0.6627
+      R@1000:
+        - 0.8641
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
@@ -100,3 +112,15 @@ models:
         - 0.6127
       R@1000:
         - 0.8240
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rocchio
+    results:
+      AP@100:
+        - 0.4151
+      nDCG@10:
+        - 0.5733
+      R@100:
+        - 0.6230
+      R@1000:
+        - 0.8316
