--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
@@ -76,6 +76,18 @@ models:
         - 0.7420
       R@1000:
         - 0.9128
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio
+    results:
+      AP@1000:
+        - 0.1841
+      RR@100:
+        - 0.1833
+      R@100:
+        - 0.7441
+      R@1000:
+        - 0.9128
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
@@ -100,3 +112,15 @@ models:
         - 0.8379
       R@1000:
         - 0.9524
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rocchio
+    results:
+      AP@1000:
+        - 0.2647
+      RR@100:
+        - 0.2642
+      R@100:
+        - 0.8448
+      R@1000:
+        - 0.9534
