--- a/src/main/resources/regression/msmarco-doc-segmented-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented-docTTTTTquery.yaml
@@ -76,6 +76,18 @@ models:
         - 0.8479
       R@1000:
         - 0.9547
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2846
+      RR@100:
+        - 0.2841
+      R@100:
+        - 0.8479
+      R@1000:
+        - 0.9551
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -100,3 +112,15 @@ models:
         - 0.8556
       R@1000:
         - 0.9567
+  - name: bm25-tuned+rocchio
+    display: +Rocchio
+    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      AP@1000:
+        - 0.2998
+      RR@100:
+        - 0.2994
+      R@100:
+        - 0.8600
+      R@1000:
+        - 0.9571
