Add description+title topic regressions for HC4

--- a/src/main/resources/regression/hc4-v1.0-fa.yaml
+++ b/src/main/resources/regression/hc4-v1.0-fa.yaml
@@ -32,6 +32,10 @@ topics:
     id: dev_description
     path: topics.hc4-v1.0-fa.dev.desc.tsv.gz
     qrel: qrels.hc4-v1.0-fa.dev.txt
+  - name: "[HC4 (Persian): dev-topic description+title](https://github.com/hltcoe/HC4)"
+    id: dev_title_description
+    path: topics.hc4-v1.0-fa.dev.desc.title.tsv
+    qrel: qrels.hc4-v1.0-fa.dev.txt
   - name: "[HC4 (Persian): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
     path: topics.hc4-v1.0-fa.test.title.tsv.gz
@@ -39,6 +43,10 @@ topics:
   - name: "[HC4 (Persian): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
     path: topics.hc4-v1.0-fa.test.desc.tsv.gz
+    qrel: qrels.hc4-v1.0-fa.test.txt
+  - name: "[HC4 (Persian): test-topic description+title](https://github.com/hltcoe/HC4)"
+    id: test_title_description
+    path: topics.hc4-v1.0-fa.test.desc.title.tsv
     qrel: qrels.hc4-v1.0-fa.test.txt
 
 
@@ -50,6 +58,8 @@ models:
       MAP:
         - 0.2919
         - 0.3188
+        - 0.3302
         - 0.2837
         - 0.2882
+        - 0.3244
 
