--- a/src/main/resources/regression/hc4-v1.0-ru.yaml
+++ b/src/main/resources/regression/hc4-v1.0-ru.yaml
@@ -32,6 +32,10 @@ topics:
     id: dev_description
     path: topics.hc4-v1.0-ru.dev.desc.tsv.gz
     qrel: qrels.hc4-v1.0-ru.dev.txt
+  - name: "[HC4 (Russian): dev-topic description+title](https://github.com/hltcoe/HC4)"
+    id: dev_description_title
+    path: topics.hc4-v1.0-ru.dev.desc.title.tsv
+    qrel: qrels.hc4-v1.0-ru.dev.txt
   - name: "[HC4 (Russian): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
     path: topics.hc4-v1.0-ru.test.title.tsv.gz
@@ -39,6 +43,10 @@ topics:
   - name: "[HC4 (Russian): test-topic description](https://github.com/hltcoe/HC4)"
     id: test_description
     path: topics.hc4-v1.0-ru.test.desc.tsv.gz
+    qrel: qrels.hc4-v1.0-ru.test.txt
+  - name: "[HC4 (Russian): test-topic description+title](https://github.com/hltcoe/HC4)"
+    id: test_description_title
+    path: topics.hc4-v1.0-ru.test.desc.title.tsv
     qrel: qrels.hc4-v1.0-ru.test.txt
 
 
@@ -50,6 +58,8 @@ models:
       MAP:
         - 0.2767
         - 0.2321
+        - 0.3130
         - 0.2105
         - 0.1779
+        - 0.2178
 
