--- a/src/main/resources/regression/hc4-v1.0-zh.yaml
+++ b/src/main/resources/regression/hc4-v1.0-zh.yaml
@@ -32,6 +32,10 @@ topics:
     id: dev_description
     path: topics.hc4-v1.0-zh.dev.desc.tsv.gz
     qrel: qrels.hc4-v1.0-zh.dev.txt
+  - name: "[HC4 (Chinese): dev-topic description+title](https://github.com/hltcoe/HC4)"
+    id: dev_description_title_
+    path: topics.hc4-v1.0-zh.dev.desc.title.tsv.gz
+    qrel: qrels.hc4-v1.0-zh.dev.txt
   - name: "[HC4 (Chinese): test-topic title](https://github.com/hltcoe/HC4)"
     id: test_title
     path: topics.hc4-v1.0-zh.test.title.tsv.gz
@@ -40,16 +44,43 @@ topics:
     id: test_description
     path: topics.hc4-v1.0-zh.test.desc.tsv.gz
     qrel: qrels.hc4-v1.0-zh.test.txt
+  - name: "[HC4 (Chinese): test-topic description+title](https://github.com/hltcoe/HC4)"
+    id: test_description_title
+    path: topics.hc4-v1.0-zh.test.desc.title.tsv.gz
+    qrel: qrels.hc4-v1.0-zh.test.txt
 
 
 models:
-  - name: bm25
-    display: BM25
-    params: -bm25 -hits 100 -language zh
+  - name: bm25-default
+    display: BM25 (default)
+    params: -bm25 -language zh
     results:
       MAP:
         - 0.2914
         - 0.1983
+        - 0.2408
         - 0.1749
         - 0.1404
-
+        - 0.1854
+  - name: bm25-default+rm3
+    display: +RM3
+    params: -bm25 -rm3 -language zh
+    results:
+      MAP:
+        - 0.3088
+        - 0.2210
+        - 0.2951
+        - 0.1562
+        - 0.1014
+        - 0.1442
+  - name: bm25-default+rocchio
+    display: +Rocchio
+    params: -bm25 -rocchio -language zh
+    results:
+      MAP:
+        - 0.2574
+        - 0.2176
+        - 0.2558
+        - 0.1618
+        - 0.1386
+        - 0.1883
