--- a/src/main/resources/regression/hc4-v1.0-ru.yaml
+++ b/src/main/resources/regression/hc4-v1.0-ru.yaml
@@ -2,7 +2,7 @@
 corpus: hc4-v1.0-ru
 corpus_path: collections/multilingual/hc4-v1.0-ru/
 
-index_path: indexes/lucene-index.hc4-v1.0-russian/
+index_path: indexes/lucene-index.hc4-v1.0-ru
 collection_class: NeuClirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
