--- a/src/main/resources/regression/hc4-v1.0-zh.yaml
+++ b/src/main/resources/regression/hc4-v1.0-zh.yaml
@@ -2,7 +2,7 @@
 corpus: hc4-v1.0-zh
 corpus_path: collections/multilingual/hc4-v1.0-zh/
 
-index_path: indexes/lucene-index.hc4-v1.0-chinese/
+index_path: indexes/lucene-index.hc4-v1.0-zh
 collection_class: NeuClirCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 8
